--- a/wp-content/themes/laureus-theme/front-dev/scss/_fonts.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_fonts.scss
@@ -1,7 +1,40 @@
 @font-face {
-    font-family: 'InterFace DaMa Lt';
-    src: url('../fonts/interface/InterFaceDaMaLt.woff2') format('woff2'),
-        url('../fonts/interface/InterFaceDaMaLt.woff') format('woff');
+    font-family: 'Gotham Light';
+    src: url('../fonts/gotham/Gotham-Light.woff2') format('woff2'),
+        url('../fonts/gotham/Gotham-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Medium';
+    src: url('../fonts/gotham/Gotham-Medium.woff2') format('woff2'),
+        url('../fonts/gotham/Gotham-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Book';
+    src: url('../fonts/gotham/Gotham-Book.woff2') format('woff2'),
+        url('../fonts/gotham/Gotham-Book.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Gotham Bold';
+    src: url('../fonts/gotham/Gotham-Bold.woff2') format('woff2'),
+        url('../fonts/gotham/Gotham-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gotham Black';
+    src: url('../fonts/gotham/Gotham-Black.woff2') format('woff2'),
+        url('../fonts/gotham/Gotham-Black.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
