--- a/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
@@ -10,15 +10,18 @@ $lgrey2: #dfe3e9;
 $lgrey3: #fafafa;
 $lgrey4: #f1f1f1;
 $lgrey5: #c9c9c9;
-$txtGrey: #3c3c3c;
+$txtgrey: #666666;
 $red: #e10e20; 
 
 //Brand colors
 $salmon: #f53b48;
 $purple: #35086e;
 $dpurple: #453A94;
-$marine: #81f3aa;
-$lblue: #00DBDE;
+$marine: #00CDCD;
+$cream: #F2F5D2;
+$crygr: #D4D743;
+$lblue: #48C6C8;
+$dblue: #001440;
 $pink: #E14FAD;
 $yellow: #f9d423;
 $b-grey: #333333;
@@ -34,6 +37,8 @@ $sm-desktop-width: 1024px;
 $big-desktop-width: 1481px;
 
 //Fonts
-
-$regular: 'Brandon Grotesque';
-$bold: 'Brandon Grotesque Bold';
+$regular: 'Gotham Medium';
+$bold: 'Gotham Bold';
+$light: 'Gotham Light';
+$book: 'Gotham Book';
+$extra: 'Gotham Black';
