--- a/wp-content/themes/laureus-theme/front-dev/scss/_header.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_header.scss
@@ -1,191 +1,91 @@
 body {
 	.navbar {
-		
-		&.affix{
-			
+		&.main-navigation{
+			background-color: transparent;
+			border: none;
+			margin: 0;
+			position: absolute;
+			width: 100%;
+			top: 0;
+			left: 0;
 			.container-fluid {
+				// Min Navigation styles
 				#navbar {
-					ul {
-						&.menu {
-							li {
-								a {
-									
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-
-		.menu-menu-principal-container {
-			@include desktop {
-				display: inline-block;
-				vertical-align: top;
-			}
-		}
-
-		.container-fluid {
-			position: relative;
-			@include mobile {
-				padding: 0 0 0 0;		
-			}
-			
-			//Social networks
-			.navbar-social {
-				display: none;
-				top: 10px;
-				right: 20px;
-				@include desktop {
-					display: inline-block;
-					vertical-align: top;
-					margin-right: 10px;
-				}
-				.header-social {
-					padding: 0;
-					li{
-						display: inline-block;
-						width: em(30);
-						height: em(30);
-						a {
-							display: block;
-							width: 100%;
-							height: 100%;
-							text-indent: 99999px;
-							background-size: 100% 100%;
-							overflow: hidden;
-						}
-						&.fb {
-							a {
-								background-image: url('../img/svgs/facebook.svg');
-							}
-						}
-						&.ins {
-							a {
-								background-image: url('../img/svgs/instagram.svg');
-							}
-						}
-						&.tw {
-							a {
-								background-image: url('../img/svgs/twitter.svg');
-							}
-						}
-						&.yt {
-							a {
-								background-image: url('../img/svgs/youtube.svg');
-							}
-						}
-					}
-				}
-			}
-
-			//logo
-			.navbar-header {
-				margin: 0 0 16px 0;
-				@include desktop {
-					float: none;
-					display: inline-block;
-					vertical-align: middle;
-					margin: 45px 0 0 60px;
-				}
-				.navbar-brand {
-					float: none;
-					display: block;
-					width: 147px;
-					height: 133px;
-					background-image: url('../img/logos/logo.png');
-					background-size: contain;
-					background-repeat: no-repeat;
-					text-indent: -9999999px; 
-					padding: 0;
-					margin: 0;
-					@include mobile {
-						width: 107px;
-						height: 93px;
-					}
-				}
-			}
-			//menu
-			#navbar {
-				vertical-align: middle;
-				width: 100%;
-				text-align: center;
-				@include mobile {
-					width: 100%;
-					text-align: center;
-					margin: 0;
-					padding: 0;
-					background-color: $black; 
-				}
-
-				@include tablet {
-					display: inline-block !important;
-					width: 80%;
-				}
-				@include desktop {
-					display: inline-block !important;
-					width: 82%;
-					margin-top: 44px;
-					text-align: right;
-				}
-				ul {
-					@include desktop {
-						text-align: right;
-					}
-					&.navbar-nav {
-						padding: 0;
-						margin: 0;
-						list-style: none;
-						float: none;
-						@include tablet {
-							display: inline-block;
-							vertical-align: middle;
-						}
+					//left menu
+					.menu-slide-links-menu-container {
+						display: block;
 						@include desktop {
 							display: inline-block;
-							vertical-align: middle;
-							text-align: right;
 						}
-						li {
-							float: none;
-							@include desktop {
-								display: inline-block;
-								vertical-align: top;
-							}
-							@include tablet {
-								display: inline-block;
-								vertical-align: middle;
-							}
-							a {
+						ul{
+							padding: 0;
+							li {
 								display: block;
-								color: $white;
-								position: relative;
-								font-size: em(13);
-								text-align: center;
-								padding: em(10) em(12);
-								transition: all 0.3s;
-								text-transform: uppercase;
-								&:hover {
-									background-color: $black;
-									color: $white;
-									border-color: $red;
+								@include desktop {
+									display: inline-block;
 								}
-								@include tablet {
-									padding: em(10);
+								a {
+									display: block;
+									padding: 20px;
+									text-align: center;
 								}
-								@include mobile {
-									padding: em(12);
+								&:first-child {
+									a {
+										background-color: $crygr;
+										color: $dblue;
+									}
+								}
+								&:last-child {
+									margin-left: -6px;
+									a {
+										background-color: $dblue;
+										color: $white;
+									}
 								}
 							}
-							&.active  {
-								a {
-									background: none;
+						}
+					}
+					// brand
+					.navbar-brand {
+						display: none;
+						overflow: hidden;
+						vertical-align: middle;
+						background-image: url('../img/logos/logo.png');
+						float: none;
+						width: 235px;
+						height: 61px;
+						text-indent: -9999999px;
+						@include desktop {
+							display: inline-block;
+							margin: 0 84px;
+						}
+
+					}
+				
+					// main menu
+					.menu-main-navigation-container {
+						display: block;
+						@include desktop {
+							display: inline-block;
+						}
+						ul {
+							&.nav{
+								padding: 0;
+								float: none;
+								li {
+									float: none;
+									display: inline-block;
+									a {
+										color: $white;
+										text-align: center;
+										padding: 10px 15px;
+									}
 								}
 							}
 						}
 					}
 				}
 			}
-		}
+		}	
 	}
 }
