--- a/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
@@ -18,6 +18,7 @@ $salmon: #f53b48;
 $purple: #35086e;
 $dpurple: #453A94;
 $marine: #00CDCD;
+$marine-dk: #7dc5c7;
 $cream: #F2F5D2;
 $crygr: #D4D743;
 $lblue: #48C6C8;
