--- a/wp-content/themes/laureus-theme/front-dev/scss/_general.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_general.scss
@@ -42,7 +42,7 @@ $browser-context: 16; // Default
 
 
 @mixin smdesktop {
-  @media (max-width: #{$desktop-width + 2}) {
+  @media (min-width: 1025px) and (max-width: 1280px) {
     @content;
   }
 }
@@ -128,8 +128,18 @@ $browser-context: 16; // Default
   transform: translate(-50%, -50%);
 }
 
+@mixin centererX {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@mixin centererY {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 body {
-	font-family: $regular;
+	font-family: $regular; 
   font-size: 16px;
   a{
     transition: all 0.3s;
@@ -144,6 +154,33 @@ body {
   }
   iframe {
     max-width: 100%;
+  }
+
+  //CTA STYLES
+  .green-cta {
+    display: block;
+    position: relative;
+    max-width: em(332);
+    width: 100%;
+    height: em(60);
+    line-height: em(60);
+    background-color: $crygr;
+    color: $dblue;
+    font-size: em(15);
+    font-family: $bold;
+    letter-spacing: 3px;
+    text-align: center;
+    text-transform: uppercase;
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: -1;
+      top: -9px;
+      left: 9px;
+      background-color: $dblue;
+    }
   }
 
   //Modal sltyle
