--- a/wp-content/themes/laureus-theme/css/styles.css
+++ b/wp-content/themes/laureus-theme/css/styles.css
@@ -89,35 +89,57 @@
   margin-left: .3em; }
 
 .fa-spin {
+  -webkit-animation: fa-spin 2s infinite linear;
   animation: fa-spin 2s infinite linear; }
 
 .fa-pulse {
+  -webkit-animation: fa-spin 1s infinite steps(8);
   animation: fa-spin 1s infinite steps(8); }
+
+@-webkit-keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg); } }
 
 @keyframes fa-spin {
   0% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg); }
   100% {
+    -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
 
 .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
   transform: rotate(90deg); }
 
 .fa-rotate-180 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
   transform: rotate(180deg); }
 
 .fa-rotate-270 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
   transform: rotate(270deg); }
 
 .fa-flip-horizontal {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1)";
+  -webkit-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
   transform: scale(-1, 1); }
 
 .fa-flip-vertical {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
+  -webkit-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
   transform: scale(1, -1); }
 
 :root .fa-rotate-90,
@@ -125,8 +147,7 @@
 :root .fa-rotate-270,
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
-  -webkit-filter: none;
-          filter: none; }
+  filter: none; }
 
 .fa-stack {
   position: relative;
@@ -2419,12 +2440,22 @@ body .navbar.main-navigation {
   width: 100%;
   top: 0;
   left: 0; }
+  @media (min-width: 1200px) {
+    body .navbar.main-navigation .container-fluid #navbar {
+      text-align: center;
+      padding-top: 1.25em; } }
   body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container {
     display: block; }
+    @media (min-width: 1200px) {
+      body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container {
+        display: inline-block; } }
     body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container ul {
       padding: 0; }
       body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container ul li {
         display: block; }
+        @media (min-width: 1200px) {
+          body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container ul li {
+            display: inline-block; } }
         body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container ul li a {
           display: block;
           padding: 1.25em;
@@ -2446,8 +2477,15 @@ body .navbar.main-navigation {
     width: 235px;
     height: 61px;
     text-indent: -9999999px; }
+    @media (min-width: 1200px) {
+      body .navbar.main-navigation .container-fluid #navbar .navbar-brand {
+        display: inline-block;
+        margin: 0 84px; } }
   body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container {
     display: block; }
+    @media (min-width: 1200px) {
+      body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container {
+        display: inline-block; } }
     body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container ul.nav {
       padding: 0;
       float: none; }
@@ -2458,6 +2496,9 @@ body .navbar.main-navigation {
           color: #ffffff;
           text-align: center;
           padding: 0 0.625em; }
+          @media (min-width: 1200px) {
+            body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container ul.nav li a {
+              border-right: 1px solid #ffffff; } }
         body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container ul.nav li:last-child a {
           border-right: none; }
 
@@ -2468,6 +2509,7 @@ body .navbar.main-navigation {
   box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -2489,6 +2531,10 @@ body .navbar.main-navigation {
 
 .slick-slider .slick-track,
 .slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
 
 .slick-track {
@@ -2553,6 +2599,8 @@ body .navbar.main-navigation {
   background: transparent;
   color: transparent;
   top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
   padding: 0;
   border: none;
@@ -2619,7 +2667,7 @@ body .navbar.main-navigation {
     position: relative;
     display: inline-block;
     height: 10px;
-    width: 60px;
+    width: 10px;
     margin: 0 5px;
     padding: 0;
     cursor: pointer; }
@@ -2646,8 +2694,187 @@ body .navbar.main-navigation {
   .logos-wrapper ul li {
     display: inline-block;
     margin: 0 2em; }
+    @media (max-width: 767px) {
+      .logos-wrapper ul li {
+        margin: 0.625em auto;
+        display: block; } }
     .logos-wrapper ul li img {
       max-width: 100%; }
+
+.beneficiaries-carousel {
+  padding: 1.75em 0; }
+  @media (min-width: 1200px) {
+    .beneficiaries-carousel {
+      padding: 4.875em 0; } }
+  .beneficiaries-carousel h3 {
+    font-size: 30px;
+    display: block;
+    color: #001440;
+    line-height: 1;
+    font-family: "Gotham Bold";
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    position: relative; }
+    @media (min-width: 1200px) {
+      .beneficiaries-carousel h3 {
+        font-size: 60px; } }
+    .beneficiaries-carousel h3 span {
+      font-size: 20px;
+      display: block; }
+    .beneficiaries-carousel h3::after {
+      content: "";
+      display: block;
+      width: 104px;
+      height: 6px;
+      background-color: #00CDCD;
+      position: absolute;
+      bottom: 0;
+      left: 0; }
+  .beneficiaries-carousel .light-carousel .carousel-item {
+    position: relative;
+    padding: 0 0.625em; }
+    .beneficiaries-carousel .light-carousel .carousel-item .inner-wrapper {
+      position: relative;
+      margin: 0.3125em;
+      min-height: 25em;
+      padding-bottom: 2.5em;
+      tranition: all 0.4s; }
+      @media (min-width: 1200px) {
+        .beneficiaries-carousel .light-carousel .carousel-item .inner-wrapper {
+          min-height: 28.75em; } }
+      .beneficiaries-carousel .light-carousel .carousel-item .inner-wrapper:hover {
+        border-bottom: 3px solid #00CDCD;
+        box-shadow: 0 0 0.3125em #dfdfdf; }
+        .beneficiaries-carousel .light-carousel .carousel-item .inner-wrapper:hover a {
+          display: block; }
+    .beneficiaries-carousel .light-carousel .carousel-item figure {
+      display: block;
+      background-size: cover;
+      background-position: top center;
+      width: 100%;
+      height: 11.5625em;
+      margin: 0 auto; }
+    .beneficiaries-carousel .light-carousel .carousel-item h4 {
+      color: #001440;
+      font-size: 1.125em;
+      font-family: "Gotham Bold";
+      padding: 0 0.625em; }
+    .beneficiaries-carousel .light-carousel .carousel-item p {
+      font-family: "Gotham Book";
+      font-size: 0.875em;
+      padding: 0 0.625em; }
+    .beneficiaries-carousel .light-carousel .carousel-item a {
+      display: none;
+      position: absolute;
+      bottom: 0.375em;
+      left: 0;
+      width: 100%;
+      color: #001440;
+      font-family: "Gotham Bold";
+      font-size: 0.875em;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      text-align: center; }
+  .beneficiaries-carousel .light-carousel .slick-dots {
+    bottom: -45px; }
+    .beneficiaries-carousel .light-carousel .slick-dots li {
+      position: relative;
+      display: inline-block;
+      height: 10px;
+      width: 10px; }
+      .beneficiaries-carousel .light-carousel .slick-dots li button {
+        height: 10px;
+        width: 10px;
+        background-color: rgba(255, 255, 255, 0.4);
+        border: 1px solid #001440;
+        padding: 5px;
+        cursor: pointer;
+        text-indent: -9999999px;
+        border-radius: 0.625em; }
+        .beneficiaries-carousel .light-carousel .slick-dots li button:hover, .beneficiaries-carousel .light-carousel .slick-dots li button:focus {
+          outline: none; }
+          .beneficiaries-carousel .light-carousel .slick-dots li button:hover:before, .beneficiaries-carousel .light-carousel .slick-dots li button:focus:before {
+            display: none; }
+      .beneficiaries-carousel .light-carousel .slick-dots li.slick-active button {
+        background-color: #001440; }
+
+.news-grid {
+  background-image: url("../img/bg/blue-pattern.jpg");
+  padding: 2.5em 0; }
+  @media (min-width: 1200px) {
+    .news-grid {
+      padding: 8.75em 0; } }
+  @media (min-width: 1200px) {
+    .news-grid .container {
+      overflow: hidden; } }
+  .news-grid .container h3 {
+    font-size: 30px;
+    display: block;
+    color: #F2F5D2;
+    line-height: 1;
+    font-family: "Gotham Bold";
+    padding-bottom: 20px; }
+    @media (min-width: 1200px) {
+      .news-grid .container h3 {
+        font-size: 60px; } }
+    .news-grid .container h3 span {
+      font-size: 20px;
+      display: block; }
+  @media (min-width: 1200px) {
+    .news-grid .container .news-wrapper {
+      overflow: hidden; } }
+  .news-grid .container .news-wrapper .news-item {
+    display: block; }
+    @media (min-width: 1200px) {
+      .news-grid .container .news-wrapper .news-item {
+        width: 50%;
+        float: left; } }
+    .news-grid .container .news-wrapper .news-item figure {
+      display: block;
+      width: 100%;
+      height: 15.625em;
+      background-size: cover;
+      background-position: top center;
+      margin: 0 0 0 0; }
+    .news-grid .container .news-wrapper .news-item .content-wrapper {
+      position: relative;
+      background-color: #F2F5D2;
+      min-height: 15.625em;
+      padding: 1.875em; }
+      .news-grid .container .news-wrapper .news-item .content-wrapper h4 {
+        font-size: 1em;
+        font-family: "Gotham Bold";
+        color: #001440; }
+      .news-grid .container .news-wrapper .news-item .content-wrapper p {
+        font-family: "Gotham Book";
+        font-size: 0.75em; }
+    @media (min-width: 1200px) {
+      .news-grid .container .news-wrapper .news-item.item__1 {
+        overflow: hidden;
+        height: 31.25em; }
+        .news-grid .container .news-wrapper .news-item.item__1 figure,
+        .news-grid .container .news-wrapper .news-item.item__1 .content-wrapper {
+          width: 50%;
+          float: left;
+          height: 31.25em; } }
+    @media (min-width: 1200px) {
+      .news-grid .container .news-wrapper .news-item.item__2 {
+        overflow: hidden;
+        height: 15.625em; }
+        .news-grid .container .news-wrapper .news-item.item__2 figure,
+        .news-grid .container .news-wrapper .news-item.item__2 .content-wrapper {
+          width: 50%;
+          float: left;
+          height: 15.625em; } }
+    @media (min-width: 1200px) {
+      .news-grid .container .news-wrapper .news-item.item__3 {
+        overflow: hidden;
+        heigth: 15.625em; }
+        .news-grid .container .news-wrapper .news-item.item__3 figure,
+        .news-grid .container .news-wrapper .news-item.item__3 .content-wrapper {
+          width: 50%;
+          float: right;
+          heigth: 15.625em; } }
 
 .hero-home-block {
   position: relative;
@@ -2674,9 +2901,15 @@ body .navbar.main-navigation {
     .hero-home-block .hero-caption h2 {
       font-size: 1.125em;
       text-transform: uppercase; }
+      @media (min-width: 1200px) {
+        .hero-home-block .hero-caption h2 {
+          font-size: 1.25em; } }
     .hero-home-block .hero-caption h3 {
       font-size: 1.875em;
       font-family: "Gotham Bold"; }
+      @media (min-width: 1200px) {
+        .hero-home-block .hero-caption h3 {
+          font-size: 3.75em; } }
     .hero-home-block .hero-caption p {
       font-size: 1.125em; }
     .hero-home-block .hero-caption .green-cta {
@@ -2696,8 +2929,16 @@ body .navbar.main-navigation {
 .story-home-block {
   height: 100vh;
   display: block; }
+  @media (min-width: 1200px) {
+    .story-home-block {
+      height: 56.25em;
+      display: flex; } }
   .story-home-block .side-story {
     position: relative; }
+    @media (min-width: 1200px) {
+      .story-home-block .side-story {
+        width: 50%;
+        height: 100vh; } }
     .story-home-block .side-story.video-wrapper {
       background-size: cover;
       background-position: center center;
@@ -2716,6 +2957,11 @@ body .navbar.main-navigation {
       .story-home-block .side-story.text-wrapper .text-content {
         width: 90%;
         max-width: 27.375em; }
+        @media (min-width: 1200px) {
+          .story-home-block .side-story.text-wrapper .text-content {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%); } }
         .story-home-block .side-story.text-wrapper .text-content h2 {
           line-height: 1;
           margin: 0;
@@ -2728,6 +2974,9 @@ body .navbar.main-navigation {
           margin-top: 0;
           font-size: 2.5em;
           font-family: "Gotham Bold"; }
+          @media (min-width: 1200px) {
+            .story-home-block .side-story.text-wrapper .text-content h3 {
+              font-size: 5em; } }
         .story-home-block .side-story.text-wrapper .text-content p {
           font-family: "Gotham Book";
           font-size: 0.875em; }
@@ -2758,6 +3007,15 @@ body .navbar.main-navigation {
       padding: 1.5625em;
       text-align: center;
       color: #ffffff; }
+      @media (min-width: 1200px) {
+        .portfolio-home-block .container .side-portfolio {
+          width: 49%;
+          padding-top: 6.75em;
+          display: inline-block;
+          vertical-align: top; } }
+      @media (min-width: 1200px) {
+        .portfolio-home-block .container .side-portfolio.text-wrapper {
+          text-align: left; } }
       .portfolio-home-block .container .side-portfolio.text-wrapper h2 {
         line-height: 1;
         margin: 0;
@@ -2770,6 +3028,9 @@ body .navbar.main-navigation {
         font-size: 1.875em;
         font-family: "Gotham Bold";
         padding-bottom: 0.375em; }
+        @media (min-width: 1200px) {
+          .portfolio-home-block .container .side-portfolio.text-wrapper h3 {
+            font-size: 3.75em; } }
         .portfolio-home-block .container .side-portfolio.text-wrapper h3::after {
           content: "";
           display: block;
@@ -2790,6 +3051,9 @@ body .navbar.main-navigation {
           width: 100%;
           margin: 0 auto;
           display: block; }
+          @media (min-width: 1200px) {
+            .portfolio-home-block .container .side-portfolio.items-wrapper ul {
+              float: right; } }
           .portfolio-home-block .container .side-portfolio.items-wrapper ul li {
             overflow: hidden;
             display: block;
@@ -2811,52 +3075,80 @@ body .navbar.main-navigation {
                 margin-top: 0;
                 font-size: 1.875em;
                 font-family: "Gotham Bold"; }
-              @media (min-width: 1200px){
-  body .navbar.main-navigation .container-fluid #navbar{
-    text-align: center;
-    padding-top: 1.25em; }
-  body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container{
-    display: inline-block; }
-  body .navbar.main-navigation .container-fluid #navbar .menu-slide-links-menu-container ul li{
-    display: inline-block; }
-  body .navbar.main-navigation .container-fluid #navbar .navbar-brand{
-    display: inline-block;
-    margin: 0 84px; }
-  body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container{
-    display: inline-block; }
-  body .navbar.main-navigation .container-fluid #navbar .menu-main-navigation-container ul.nav li a{
-    border-right: 1px solid #ffffff; }
-  .hero-home-block .hero-caption h2{
-    font-size: 1.25em; }
-  .hero-home-block .hero-caption h3{
-    font-size: 3.75em; }
-  .story-home-block{
-    height: 56.25em;
-    display: -ms-flexbox;
-    display: flex; }
-  .story-home-block .side-story{
-    width: 50%;
-    height: 100vh; }
-  .story-home-block .side-story.text-wrapper .text-content{
+                @media (min-width: 1200px) {
+                  .portfolio-home-block .container .side-portfolio.items-wrapper ul li span h5 {
+                    font-size: 3.125em; } }
+
+.involved-home-block {
+  position: relative; }
+  .involved-home-block h3 {
+    font-size: 30px;
+    display: block;
+    color: #ffffff;
+    line-height: 1;
+    font-family: "Gotham Bold";
+    padding-bottom: 20px;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%); }
-  .story-home-block .side-story.text-wrapper .text-content h3{
-    font-size: 5em; }
-  .portfolio-home-block .container .side-portfolio{
-    width: 49%;
-    padding-top: 6.75em;
-    display: inline-block;
-    vertical-align: top; }
-  .portfolio-home-block .container .side-portfolio.text-wrapper{
-    text-align: left; }
-  .portfolio-home-block .container .side-portfolio.text-wrapper h3{
-    font-size: 3.75em; }
-  .portfolio-home-block .container .side-portfolio.items-wrapper ul{
-    float: right; }
-  .portfolio-home-block .container .side-portfolio.items-wrapper ul li span h5{
-    font-size: 3.125em; } }
-              @media (max-width: 767px){
-  .logos-wrapper ul li{
-    margin: 0.625em auto;
-    display: block; } }
+    top: 40px;
+    left: 34px;
+    z-index: 3; }
+    @media (min-width: 1200px) {
+      .involved-home-block h3 {
+        top: 60px;
+        left: 44px;
+        font-size: 60px; } }
+    .involved-home-block h3 span {
+      font-size: 20px;
+      display: block; }
+    .involved-home-block h3::after {
+      content: "";
+      display: block;
+      width: 104px;
+      height: 6px;
+      background-color: #D4D743;
+      position: absolute;
+      bottom: 0;
+      left: 0; }
+  .involved-home-block ul {
+    display: block;
+    padding: 0; }
+    @media (min-width: 1200px) {
+      .involved-home-block ul {
+        display: flex; } }
+    .involved-home-block ul li {
+      display: block;
+      height: 28.125em;
+      text-align: center;
+      background-size: cover;
+      background-position: left top;
+      position: relative;
+      transition: all 0.4s; }
+      .involved-home-block ul li > a {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, 0.3); }
+      .involved-home-block ul li:hover > a {
+        background-color: rgba(255, 255, 255, 0); }
+      @media (min-width: 1200px) {
+        .involved-home-block ul li:hover {
+          width: 25%; } }
+      @media (min-width: 1200px) {
+        .involved-home-block ul li {
+          text-align: left;
+          width: 20%;
+          height: 43.75em; } }
+      .involved-home-block ul li .involved__wrap {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        padding: 2.0625em;
+        z-index: 2; }
+        .involved-home-block ul li .involved__wrap h4 {
+          color: #ffffff;
+          font-size: 1.25em; }
