--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -25,9 +25,12 @@
 
 // Universal Blocks
 @import "blocks/commons/_block-logos";
+@import "blocks/commons/_block-light-carousel";
+@import "blocks/commons/_block-news-grid";
 
 
 //Blocks Home
 @import "blocks/home/_block-hero";
 @import "blocks/home/_block-story";
 @import "blocks/home/_block-portfolio";
+@import "blocks/home/_block-involved";
